--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,14 +12,14 @@ jobs:
 
     env:
       AWS_REGION: ${{ secrets.AWS_REGION }}
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}\
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
-      ECR_REPOSITORY_UNLEASH: ${{ secrets.ECR_REPOSITORY }}
-      ECS_CLUSTER_UNLEASH: ${{ secrets.ECS_CLUSTER }}
-      ECS_SERVICE_UNLEASH: ${{ secrets.ECS_SERVICE }}
-      ECS_TASK_DEFINITION_FAMILY_UNLEASH: ${{ secrets.ECS_TASK_DEFINITION_FAMILY }}
-      ECS_CONTAINER_NAME_UNLEASH: ${{ secrets.ECS_CONTAINER_NAME }}
+      ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+      ECS_CLUSTER: ${{ secrets.ECS_CLUSTER }}
+      ECS_SERVICE: ${{ secrets.ECS_SERVICE }}
+      ECS_TASK_DEFINITION_FAMILY: ${{ secrets.ECS_TASK_DEFINITION_FAMILY }}
+      ECS_CONTAINER_NAME: ${{ secrets.ECS_CONTAINER_NAME }}
 
     steps:
       # Step 1: Check out the code (including your Dockerfile)
