--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
   # The Unleash server contains the Unleash configuration and
   # communicates with server-side SDKs and the Unleash Proxy
   web:
-    image: unleashorg/unleash-server:latest
+    build: .
     ports:
       - "4242:4242"
     environment:
@@ -33,7 +33,6 @@ services:
     depends_on:
       db:
         condition: service_healthy
-    command: [ "node", "index.js" ]
     healthcheck:
       test: wget --no-verbose --tries=1 --spider http://localhost:4242/health || exit 1
       interval: 1s
